[package]
name = "flux-tunnel"
version = "0.1.0"
description = "Tunnel management for Flux VPN"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
vpn.country = 'us'

[dependencies]
serde = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
