[package]
name = "flux-types"
version = "0.1.0"
description = "Shared type definitions for Flux VPN"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
