[package]
name = "flux-wireguard"
version = "0.1.0"
description = "WireGuard integration for Flux VPN"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
